fix z-index for moving background, finish setup project

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
 }
 
 .moving-background {
-  z-index: 1;
+  z-index: -1;
   position: absolute;
   top: 0;
   left: 0;
